refactor: rename test methods for naming consistency